# originclaw

./: README.md  index.html  install.sh  main.py  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/data/: mockData.ts
originclaw_monitor/: __init__.py  channels.py  cli.py  collector.py  discovery.py  postinstall.py
website/: index.html
